deploy/kube/dotnet-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dotnet-service
  name: dotnet-service
spec:
  ports:
  - name: grpc-82
    port: 82
    targetPort: 8080
  selector:
    app: dotnet-service
